@@ -8,13 +8,10 @@ import java.util.Objects;
 import java.util.Optional;
 import org.apache.commons.text.StringEscapeUtils;
 import org.broadinstitute.consent.http.models.DataAccessRequestData;
+import org.broadinstitute.consent.http.util.ConsentLogger;
 import org.jdbi.v3.core.result.RowView;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-public interface RowMapperHelper {
-
-  Logger log = LoggerFactory.getLogger(RowMapperHelper.class);
+public interface RowMapperHelper extends ConsentLogger {
 
   @SuppressWarnings({"rawtypes", "unchecked"})
   /*
@@ -27,10 +24,25 @@ public interface RowMapperHelper {
    */
   default boolean hasColumn(RowView rowView, String columnName, Class clazz) {
     try {
-      rowView.getColumn(columnName, clazz);
-      return true;
+      return rowView.getColumn(columnName, clazz) != null;
     } catch (Exception e) {
-      log.debug("RowView does not contain column " + columnName);
+      logDebug("RowView does not contain column %s".formatted(columnName));
+      return false;
+    }
+  }
+
+  /*
+   * Utility method to check if a column exists and has a non-zero value.
+   *
+   * @param rowView The RowView
+   * @param columnName The column name
+   * @return True if the column has non-zero results, false otherwise
+   */
+  default boolean hasNonZeroColumn(RowView rowView, String columnName) {
+    try {
+      return rowView.getColumn(columnName, Integer.class) != null && rowView.getColumn(columnName, Integer.class) > 0;
+    } catch (Exception e) {
+      logDebug("RowView does not contain column %s".formatted(columnName));
       return false;
     }
   }
@@ -47,7 +59,7 @@ public interface RowMapperHelper {
     try {
       return Optional.of(rowView.getColumn(columnName, clazz));
     } catch (Exception e) {
-      log.debug(String.format("RowView does not contain column %s", columnName));
+      logDebug("RowView does not contain column %s".formatted(columnName));
       return Optional.empty();
     }
   }
@@ -72,6 +84,26 @@ public interface RowMapperHelper {
     return false;
   }
 
+  /*
+   * Utility method to check if a column exists and has a non-zero value.
+   *
+   * @param rowView The RowView
+   * @param columnName The column name
+   * @return True if the column has non-zero results, false otherwise
+   */
+  default boolean hasNonZeroColumn(ResultSet rs, String columnName) throws SQLException {
+    ResultSetMetaData rsmd = rs.getMetaData();
+    int columns = rsmd.getColumnCount();
+    for (int x = 1; x <= columns; x++) {
+      // postgres -> case insensitive columns
+      if (columnName.equalsIgnoreCase(rsmd.getColumnName(x))) {
+        return rs.getInt(columnName) > 0;
+      }
+    }
+    return false;
+  }
+
+
   static String unescapeJava(String value) {
     return StringEscapeUtils.unescapeJava(StringEscapeUtils.unescapeJava(value));
   }
@@ -86,8 +118,7 @@ public interface RowMapperHelper {
       try {
         data = DataAccessRequestData.fromString(escapedDataString);
       } catch (JsonSyntaxException | NullPointerException e) {
-        String message = "Unable to parse Data Access Request; error: " + e.getMessage();
-        log.error(message);
+        logDebug("Unable to parse Data Access Request; error: %s".formatted(e.getMessage()));
         throw e;
       }
     }
