@@ -10,6 +10,7 @@ import com.sendgrid.SendGrid;
 import com.sendgrid.helpers.mail.Mail;
 import com.sendgrid.helpers.mail.objects.Email;
 import com.sendgrid.helpers.mail.objects.Personalization;
+import jakarta.ws.rs.WebApplicationException;
 import java.io.IOException;
 import java.io.Writer;
 import java.util.List;
@@ -26,17 +27,17 @@ import org.broadinstitute.consent.http.mail.message.DatasetDeniedMessage;
 import org.broadinstitute.consent.http.mail.message.DatasetSubmittedMessage;
 import org.broadinstitute.consent.http.mail.message.DisabledDatasetMessage;
 import org.broadinstitute.consent.http.mail.message.NewCaseMessage;
+import org.broadinstitute.consent.http.mail.message.NewDAAUploadResearcherMessage;
+import org.broadinstitute.consent.http.mail.message.NewDAAUploadSOMessage;
 import org.broadinstitute.consent.http.mail.message.NewDARRequestMessage;
 import org.broadinstitute.consent.http.mail.message.NewResearcherLibraryRequestMessage;
 import org.broadinstitute.consent.http.mail.message.ReminderMessage;
 import org.broadinstitute.consent.http.mail.message.ResearcherApprovedMessage;
 import org.broadinstitute.consent.http.models.User;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.broadinstitute.consent.http.util.ConsentLogger;
 
-public class SendGridAPI {
+public class SendGridAPI implements ConsentLogger {
 
-  private final Logger logger = LoggerFactory.getLogger(this.getClass());
   private String fromAccount;
   private SendGrid sendGrid;
   private Boolean activateEmailNotifications;
@@ -51,6 +52,8 @@ public class SendGridAPI {
   private final DatasetSubmittedMessage datasetSubmittedMessage = new DatasetSubmittedMessage();
   private final NewResearcherLibraryRequestMessage newResearcherLibraryRequestMessage = new NewResearcherLibraryRequestMessage();
   private final DaaRequestMessage daaRequestMessage = new DaaRequestMessage();
+  private final NewDAAUploadSOMessage newDAAUploadSOMessage = new NewDAAUploadSOMessage();
+  private final NewDAAUploadResearcherMessage newDAAUploadResearcherMessage = new NewDAAUploadResearcherMessage();
   private final UserDAO userDAO;
 
   public SendGridAPI(MailConfiguration config, UserDAO userDAO) {
@@ -90,7 +93,7 @@ public class SendGridAPI {
       if (!tos.isEmpty()) {
         User user = userDAO.findUserByEmail(tos.get(0).getEmail());
         if (Objects.isNull(user)) {
-          logger.error("Unknown user: " + tos.get(0).getEmail());
+          logWarn("Unknown user: %s".formatted(tos.get(0).getEmail()));
           return false;
         }
         if (Objects.isNull(user.getEmailPreference())) {
@@ -106,8 +109,8 @@ public class SendGridAPI {
     boolean userEmailPreference = findUserEmailPreference(message);
     if (!userEmailPreference) {
       Gson gson = new Gson();
-      logger.info("User Email Preference has evaluated to 'false', not sending to: " + gson.toJson(
-          message.getPersonalization()));
+      logInfo("User Email Preference has evaluated to 'false', not sending to: %s".formatted(gson.toJson(
+          message.getPersonalization())));
     }
     if (activateEmailNotifications && userEmailPreference) {
       try {
@@ -127,13 +130,13 @@ public class SendGridAPI {
         if (response.getStatusCode() > 202) {
           // Indicates some form of error:
           // https://docs.sendgrid.com/api-reference/mail-send/mail-send#responses
-          logger.error(
-              String.format("Error sending email via SendGrid: '%s': %s", response.getStatusCode(),
-                  response.getBody()));
+          logException(
+              "Error sending email via SendGrid: '%s': %s".formatted(response.getStatusCode(),
+                  response.getBody()), new WebApplicationException(response.getStatusCode()));
         }
         return Optional.of(response);
       } catch (IOException ex) {
-        logger.error("Exception sending email via SendGrid: " + ex.getMessage());
+        logException("Exception sending email via SendGrid: %s".formatted(ex.getMessage()), ex);
         // Create a response that we can use to capture this failure.
         Response response = new Response(
             HttpStatusCodes.STATUS_CODE_SERVER_ERROR,
@@ -218,6 +221,20 @@ public class SendGridAPI {
       throws MessagingException {
     Mail message = daaRequestMessage.newDaaRequestMessage(toAddress, fromAccount,
         template, daaId);
+    return sendMessage(message);
+  }
+
+  public Optional<Response> sendNewDAAUploadSOMessage(String toAddress, Writer template, String dacName)
+      throws MessagingException {
+    Mail message = newDAAUploadSOMessage.newDAAUploadSOMessage(toAddress, fromAccount,
+        template, dacName);
+    return sendMessage(message);
+  }
+
+  public Optional<Response> sendNewDAAUploadResearcherMessage(String toAddress, Writer template, String dacName)
+      throws MessagingException {
+    Mail message = newDAAUploadResearcherMessage.newDAAUploadResearcherMessage(toAddress, fromAccount,
+        template, dacName);
     return sendMessage(message);
   }
 
